Fixed the create memory part for it to work

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Add scrollbar styling */
+.scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+}
+
+/* Marker info window styling */
+.gm-style .gm-style-iw-d {
+    overflow: hidden !important;
+}
